# vocoder

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  checks.sh  docs.sh  sa.sh  setup.sh
.github/ISSUE_TEMPLATE/: epic.md  user-story.md
.github/workflows/: action.yml  nightly.yml  static analysis.yml  test_on_push.yml  unit_tests.yml
doc/: Doxyfile
doc/html/: index.html  md_README.html  pages.html
doc/html/search/: all_0.js  pages_0.js
doc/latex/: refman.tex
docs/: alsa__out_8hh_source.html  annotated.html  classAlsaOut-members.html  classAmplifier-members.html  classBPFilter.html  classBPFilter__coll__graph.map  classBPFilter__coll__graph.md5  classRMS-members.html  classRMS__coll__graph.map  classScheduler__helper__coll__graph.map  classScheduler__helper__coll__graph.md5  classalsa__callback_1_1acb-members.html  classmixer_1_1Mixer.html  classmixer_1_1Mixer__coll__graph.map  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e7c608ee7a349a990cecd74a7d13d4b1.html  files.html  functions.html  functions_func.html  index.html  md_README.html  mixer_8hh_source.html  pages.html  pipe_8hh_source.html  rms_8hh_source.html
docs/html/: amp_8hh_source.html  audio_8hh_source.html  callbacks_8hh_source.html  classAlsaOut.html  classAlsaOut__coll__graph.map  classAmplifier.html  classAmplifier__coll__graph.map  classAmplifier__coll__graph.md5  classBPFilter-members.html  classRMS.html  classScheduler__helper-members.html  classScheduler__helper.html  classalsa__callback_1_1acb.html  classalsa__callback_1_1acb__coll__graph.map  classes.html  classmixer_1_1Mixer-members.html  classmixer_1_1Mixer__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  filter_8hh_source.html  functions_vars.html  graph_legend.html  namespacealsa__callback.html  namespacemixer.html  namespaces.html  scheduler__helper_8hh_source.html  structPipe-members.html  structPipe.html  structPipe__coll__graph.map  structPipe__coll__graph.md5
docs/html/search/: all_0.js  all_7.js  all_b.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_2.js  functions_3.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js
docs/latex/: annotated.tex  classAlsaOut.tex  classAlsaOut__coll__graph.md5  classAmplifier.tex  classBPFilter.tex  classRMS.tex  classRMS__coll__graph.md5  classScheduler__helper.tex  classalsa__callback_1_1acb.tex  classalsa__callback_1_1acb__coll__graph.md5  classmixer_1_1Mixer.tex  index.tex  md_README.tex  namespacealsa__callback.tex  namespacemixer.tex  namespaces.tex  refman.tex  structPipe.tex
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_5.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  namespaces_1.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
include/: alsa_out.hh  amp.hh  audio.hh  callbacks.hh  filter.hh  mixer.hh  pipe.hh  rms.hh  scheduler_helper.hh
include/amp/: amp.cc  amp.hh
include/audio/: audio.hh
include/filter/: filter.hh
include/mixer/: mixer.hh
include/rms/: rms.hh
src/: CMakeLists.txt  CMakeLists.txt.in  alsa_out.cc  amp.cc  audio.cc  callbacks.cc  filter.cc  main.cc  rms.cc  scheduler_helper.cc
src/amp/: amp.hh
src/audio/: audio.cc  audio.hh
src/doc/html/: graph_legend.html
src/doc/latex/: refman.tex
src/filter/: filter.cc  filter.hh
src/unit_tests/: example_test.cc  filter_test.cpp
unit_tests/: CMakeLists.txt  alsa_out_test.cc  amp_test.cc  cmake_linker.py  example_test.cc  filter_test.cc  level_control_test.cc  mixer_tests.cc  rms_tests.cc
unit_tests/filter/: filter_test.cc
